apps/calidum-rotae/base/email-provider/networkPolicy.yaml
# email-provider-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-email-provider-egress
  namespace: calidum-rotae
spec:
  podSelector:
    matchLabels:
      app: email-provider
  policyTypes:
    - Egress
  egress:
    - to:
      - ipBlock:
          cidr: 10.96.0.10/32
      ports:
        - protocol: UDP
      port: 53
    - to:
      - ipBlock:
          cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
      port: 443
    - to:
      - ipBlock:
        cidr: 0.0.0.0/0
      ports:
        - protocol: ICMP
